# SINDY-RUST

./: .gitignore  Cargo.toml  README.md
examples/: kinetix6500.rs
src/: discrete_sindy.rs  error.rs  lib.rs  sindy.rs
src/differentiation/: finite_difference.rs  mod.rs
src/feature_library/: concat.rs  custom.rs  fourier.rs  generalized.rs  mod.rs  parameterized.rs  pde.rs  polynomial.rs  sindy_pi.rs  weak_pde.rs
src/optimizers/: constrained_sr3.rs  ensemble.rs  evidence_greedy.rs  frols.rs  mod.rs  sr3.rs  ssr.rs  stlsq.rs
src/utils/: axes_array.rs  mod.rs  regularization.rs  validation.rs
